# ISEF-project

./: .gitignore  ISEF-project.code-workspace  README.md  STYLING.json
API/: README_Medicine_Setup.md  README_PAYMENT_SETUP.md  index.js  package-lock.json  setup-MEDPage.js
API/AUTH/Admin/: AdminLogin.js  Adminsingup.js
API/AUTH/COMPANY/: HandleDataUpdate.js  HandleLogin.js
API/AUTH/USER/: HandleSignup.js
API/DB/: DB.js
API/Models/: MedicineModel.js  QuoteRequestModel.js  ShoppingCartModel.js  UserActivityModel.js  UserModel.js
API/Routes/: Payment.js  QuoteRequest.js  UserActivity.js
API/rust_lib/src/: lib.rs  main.rs
DOCS/: instructions.md
DOCS/API/: Admin.md  DEPLOYMENT.md
DOCS/Baner_DOCS/: BackgroundResearch.md  Purpose.md  heypothisis.md
DOCS/Client/: COMPONENTS.md  DEPLOYMENT.md  STYLING.md
DOCS/Code_DOCS/API/: DATABASE.md  README.md  SECURITY.md  TESTING.md
DOCS/Code_DOCS/Client/: README.md
WebApp/API/: package.json
WebApp/API/AUTH/: isAUTH.js
WebApp/API/Models/: AdminModel.js  CompanyModel.js  OrderModel.js
WebApp/API/Routes/: MEDPage.js  ShoppingCart.js
WebApp/API/rust_lib/: Cargo.toml  README.md
WebApp/API/rust_lib/src/: Commadns.md
WebApp/API/rust_lib/src/modules/: auth.rs  mod.rs
WebApp/client/: package.json
client/: .gitignore  package-lock.json
client/src/Components/: AuthGuard.tsx  BottomNav.tsx  Card.tsx  NavBar.tsx  NavBarNoAUTH.tsx  PageHandle.tsx
client/src/Tools/: useAppData.ts  useInputHandling.ts
client/src/Types/: Button.ts  CardProps.ts  Orders.ts  Routes.ts  User.ts
client/src/app/: layout.tsx
(+41 files in other folders)
